# hitdexter

./: CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-container.yml  release.yml  test.yml
hitdexter/: __init__.py  __main__.py  hitdexter3_model.py
hitdexter/data/: nerdd.yml
hitdexter/models/hitdexter2/ml_models/: CDRA_MN_MultiCore.pkl.gz.REMOVED.git-id  CDRA_MN_SingelCore.pkl.gz.REMOVED.git-id  PSA_MN_MultiCore.pkl.gz.REMOVED.git-id  PSA_MN_SingelCore.pkl.gz.REMOVED.git-id
hitdexter/patterns/: __init__.py  hitdexter.py  patterns.py
hitdexter/preprocessing/: __init__.py  canonicalize_tautomer.py  do_smiles_roundtrip.py  hitdexter_preprocessing_pipeline.py
tests/: steps.py  test_consistent_predictions.py  test_valid_predictions.py
tests/features/: consistent_predictions.feature  valid_predictions.feature
